<resources>
    <string name="app_name">pmdmFinalApp</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Event Name</string>
    <string name="all_day">All Day</string>
    <string name="since">since</string>
    <string name="untill">untill</string>
    <string name="select_color">Select Color</string>
    <string name="card_color">Card Color</string>
    <string name="add_a_description">Add a description</string>
    <string name="save">Save</string>
    <string name="to">To</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="hour_since">Hour since</string>
    <string name="hour_to">Hour to</string>
</resources>
