<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FF0000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/description"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_to" />

    <TextView
        android:id="@+id/tv_since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_since" />

</LinearLayout>